--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <li><a href="http://belong.io/">belong.io</a></li>
       <li><a href="http://lobste.rs/">lobste.rs<br></a>
       <li><a href="http://reddit.com/">reddit</a></li>
-      <li><a href="http://www.kottke.org/">Kottke</a></li>
+      <!--<li><a href="http://www.kottke.org/">Kottke</a></li>-->
       <li><a href="http://gothamist.com/blog.php">gothamist</a></li>
       </ul>
 </article>
@@ -131,10 +131,12 @@
       <ul>
       <li><a href="http://ashevilleweather.com/Forecast/Asheville">Ray's Weather Center</a></li>
       <li><a href="https://forecast.weather.gov/MapClick.php?lat=35.3331&lon=-82.4796">NOAA</a></li>
-      <li><a href="https://water.weather.gov/ahps2/index.php?wfo=gsp">NWS Hydrologic Prediction</a></li>
       <li><a href="https://www.wunderground.com/forecast/us/nc/hendersonville/KNCHENDE105?cm_ven=localwx_10day">Weather Underground</a></li>       
       <li><a href="https://darksky.net/forecast/35.3149,-82.4931/us12/en">darksky.net</a></li>
+      Specialized<br>  
+      <li><a href="https://water.weather.gov/ahps2/index.php?wfo=gsp">NWS Hydrologic Prediction</a></li>
       <li><a href="https://www.lightningmaps.org/">lightningmaps.org</a></li>
+        <li><a href="https://inciweb.nwcg.gov/">InciWeb- Incident Information</a></li>
       </ul>
 </article>
 <article id="h"> 
