--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
       Environments<br>
       <li><a href="https://observablehq.com/">observable</a></li>
       <li><a href="https://glitch.com/">glitch</a></li>
+      <li><a href="https://jupyter.org/">jupyter</a></li>        
       <li><a href="https://codesandbox.io/">codesandbox</a></li>        
       </ul>
 </article>
